libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__union_type.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Union type as generic argument
expression: Int | String
info:
  kind: Ok
---
GenericArgument#4294967040@8
  Type#4294967040@7
    TypeKind (Union)
      UnionType#4294967040@7
        Type#4294967040@3
          TypeKind (Path)
            Path#4294967040@3 (rooted: false)
              PathSegment#4294967040@2 (name: Int)
        Type#4294967040@6
          TypeKind (Path)
            Path#4294967040@6 (rooted: false)
              PathSegment#4294967040@5 (name: String)
