libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__whitespace_handling.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Generics with whitespace
expression: "< T , U >"
info:
  kind: Ok
---
Generics#4294967040@5
  GenericParam#4294967040@2 (name: T)
  GenericParam#4294967040@4 (name: U)
