libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__whitespace_handling_argument.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Generic argument with whitespace
expression: " Int "
info:
  kind: Ok
---
GenericArgument#4294967040@4
  Type#4294967040@3
    TypeKind (Path)
      Path#4294967040@3 (rooted: false)
        PathSegment#4294967040@2 (name: Int)
